gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gitlab
  namespace: gitlab
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetesgitlab.com
    http:
      paths:
      - backend:
          service:
            name: gitlab
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: gitlab
            port:
              number: 5150
        path: /v2
        pathType: Prefix
